fix: add overflow to menu

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -38,7 +38,8 @@ body {
 }
 
 .container {
-  width: 375px;
+  width: 100%;
+  max-width: 768px;
   margin: 0 auto;
   box-sizing: border-box;
 }
@@ -127,10 +128,10 @@ a {
     padding: 20px;
     padding-top: 40px;
     box-sizing: border-box;
-    overflow-: hidden;
     transform: translateY(-1000px);
     opacity: 0;
     transition: all 0.5s ease;
+    overflow: hidden;
 
     &--open {
       top: 70px;
